tests and few fixes